--- a/Game-Project/Application.csproj
+++ b/Game-Project/Application.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Content Pipeline\Content Library.csproj" />
-    <ProjectReference Include="..\Domain\Library.csproj" />
+    <ProjectReference Include="..\Library\Library.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\assets\maps\" />
